src/main.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
@import "tailwindcss";

:root {
  /*********************
    --> color 
    **********************/
  /* --> body bg */
  --color-background: #1b2316;
  --color-background-transparent: #12121271;

  /* --> items bg */
  --color-primary: #ffffff0d;
  --color-stars: #fff84e;

  /* --> text color */
  --color-text-primary: #ffffff;
  --color-text-secondary: #ffffffbf;

  /* footer bg */
  --color-footer-bg: #222c1d;

  /*********************
    --> border 
    **********************/
  --border-primary-width: 2px;
  --border-primary-color: rgba(255, 255, 255, 0.45);
  --border-secondary-width: 3px;
  --border-secondary-color: rgba(255, 255, 255, 0.27);
  --border-tertiary-width: 2px;
  --border-tertiary-color: #fff;

  /*********************
    --> stroke 
    **********************/
  /* --> width */
  --stroke-width-2: 2px;

  /* --> color */
  --stroke-color-primary: rgba(255, 255, 255, 0.4);

  /*********************
    --> blur
    **********************/
  --blur-primary: 10.100000381469727px;
  --blur-secondary: 12.5px;
  --blur-tertiary: 20px;

  /*********************
    --> font
    **********************/
  --website-font: "Inter", sans-serif;
}

@layer base {
  *,
  *::before,
  *::after {
    box-sizing: border-box;
    margin: 0;
    font-weight: normal;
  }

  ul {
    list-style: none;
  }

  img {
    -webkit-user-drag: none;
  }

  body {
    @apply bg-[var(--color-background)] h-full select-none font-[var(--website-font)];
  }

  .app-container {
    @apply min-h-screen flex flex-col;
  }

  main {
    @apply flex-1;
  }

  ::-webkit-scrollbar {
    @apply w-0;
  }

  .animate-button-hover:hover {
    animation: button-hover 0.3s ease-in-out forwards;
    transition: 0.6s;
  }

  .animate-fade-in {
    animation: fade-in 0.6s ease-in forwards;
  }

  .animate-fade-right {
    animation: fade-right 0.6s ease-in forwards;
  }
}

@keyframes button-hover {
  from {
    background: linear-gradient(
      to right,
      var(--color-text-primary),
      rgba(0, 0, 0, 0) 0%
    );
  }
  to {
    background: linear-gradient(
      to right,
      var(--color-text-primary),
      rgba(0, 0, 0, 0) 100%
    );
  }
}

@keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes fade-right {
  0% {
    opacity: 0;
    transform: translateY(-0.4rem);
  }
  70% {
    transform: translateY(0);
  }
  100% {
    opacity: 1;
  }
}

